--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@types/d3": "^7.4.3",
     "d3": "^7.9.0",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.344.0",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/date-fns": "^2.5.3",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
